[tool.poetry]
name = "home-work2"
version = "0.1.0"
description = " Домашнее задание Poetry 9.1 "
authors = ["Sergei Kalinichenko <ssk98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
masks = "^0.1.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Конфигурация mypy
[tool.mypy]
disallow_untyped_defs = true  # Запретить неаннотированные функции
exclude = "venv"  # Исключить виртуальное окружение
warn_return_any = true # Предупреждает, если в качестве возвращаемого типа было указано Any

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '\.git' # в корне проекта

[tool.isort]
# Максимальная длина строки
line_length = 119